--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,38 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Red Social Deportiva</title>
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <meta charset="utf-8">
+    <title>Red Social Deportiva</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
 
-  <!-- Bootstrap Core CSS -->
-  <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom CSS -->
-  <link href="assets/css/style.css" rel="stylesheet">
-  <!-- You can change the theme colors from here -->
-  <link href="assets/css/colors/masqueplus.css" id="theme" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="assets/css/style.css" rel="stylesheet">
+    <!-- You can change the theme colors from here -->
+    <link href="assets/css/colors/masqueplus.css" id="theme" rel="stylesheet">
 
-  <base href="/">
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="apple-touch-icon" href="assets/img/ico/apple-icon-120.png">
-  <link rel="shortcut icon" type="image/x-icon" href="assets/img/ico/favicon-32.png">
-  <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/fonts/feather/style.min.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/vendors.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/app.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/core/menu/menu-types/vertical-menu-modern.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/personal/anuncios.css">
-  <link rel="stylesheet" type="text/css" href="assets/vendors/css/extensions/pace.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="assets/img/ico/apple-icon-120.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/ico/favicon-32.png">
+    <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/feather/style.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/vendors.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/app.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/core/menu/menu-types/vertical-menu-modern.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/personal/anuncios.css">
+    <link rel="stylesheet" type="text/css" href="assets/vendors/css/extensions/pace.css">
+
+    <!--Google-->
+    <script src="https://apis.google.com/js/platform.js?onload=init"></script>
+    <meta name="google-signin-client_id" content="681141320644-3hcccd6ai3pjshkt6uhhq30lqqkjqtio.apps.googleusercontent.com">
 </head>
-<body class="fix-header card-no-border fix-sidebar">
+
+<body class="vertical-layout vertical-overlay-menu 2-columns menu-expanded fixed-navbar" data-open="click" data-menu="vertical-overlay-menu" data-col="2-columns">
     <!-- ============================================================== -->
     <!-- Preloader - style you can find in spinners.css -->
     <!-- ============================================================== -->
@@ -36,7 +42,7 @@
             <p class="loader__label">Más Que Plus: Red Social Deportiva</p>
         </div>
     </div>
-  <app-root></app-root>
+    <app-root></app-root>
 
     <!-- ============================================================== -->
     <!-- All Jquery -->
@@ -61,4 +67,5 @@
     <script src="assets/js/core/app-menu.js" type="text/javascript"></script>
     <script src="assets/js/core/app.js" type="text/javascript"></script>
 </body>
+
 </html>
